[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GameMenu/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://Data/Fonts/main_font.ttf" type="FontFile" id=2]

[sub_resource type="FontFile" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
Label/fonts/font = null

[node name="GameMenu" type="Control"]
anchor_right = 0.417
anchor_bottom = 0.625
offset_right = -0.320038
theme = SubResource( 4 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.533333, 0.533333, 0.533333, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="OpMonLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 136.0
text = "GAMEMENU_OPMON"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BagLabel" type="Label" parent="."]
offset_left = 208.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 136.0
text = "GAMEMENU_BAG"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpDexLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 144.0
offset_right = 192.0
offset_bottom = 269.0
text = "GAMEMENU_ENCYCLOPEDIA"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IDLabel" type="Label" parent="."]
offset_left = 208.0
offset_top = 144.0
offset_right = 392.0
offset_bottom = 269.0
text = "GAMEMENU_ID"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 269.0
offset_right = 192.0
offset_bottom = 394.0
text = "GAMEMENU_SAVE"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="Label" parent="."]
offset_left = 208.0
offset_top = 269.0
offset_right = 392.0
offset_bottom = 394.0
text = "GAMEMENU_SETTINGS"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceRect" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 136.0
color = Color( 1, 1, 1, 0.45098 )

[node name="Subinterface" type="Node" parent="."]
